<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.constraint.Guideline
        android:id="@+id/glv_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <android.support.constraint.Guideline
        android:id="@+id/glv_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <android.support.constraint.Guideline
        android:id="@+id/glv_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_nombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/glv_3"
        app:layout_constraintStart_toStartOf="@+id/glv_1"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tie_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_contacto_edittext_nombre"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:nextFocusForward="@id/til_apellido" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_apellido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/glv_3"
        app:layout_constraintStart_toStartOf="@+id/glv_1"
        app:layout_constraintTop_toBottomOf="@id/til_nombre">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tie_apellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_contacto_edittext_apellido"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:nextFocusForward="@id/til_telefono" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_telefono"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/glv_2"
        app:layout_constraintStart_toStartOf="@+id/glv_1"
        app:layout_constraintTop_toBottomOf="@id/til_apellido">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tie_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_contacto_edittext_movil"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:nextFocusForward="@id/til_anexo" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_anexo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/glv_2"
        app:layout_constraintStart_toStartOf="@+id/glv_1"
        app:layout_constraintTop_toBottomOf="@id/til_telefono">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tie_anexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_contacto_edittext_anexo"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:nextFocusForward="@id/til_email" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/glv_3"
        app:layout_constraintStart_toStartOf="@+id/glv_1"
        app:layout_constraintTop_toBottomOf="@id/til_anexo">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tie_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_contacto_edittext_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:nextFocusForward="@id/tie_cargo_empresa" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_empresa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/glv_3"
        app:layout_constraintStart_toStartOf="@+id/glv_1"
        app:layout_constraintTop_toBottomOf="@id/til_email">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tie_empresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/edit_contacto_edittext_empresa"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_cargo_empresa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/glv_3"
        app:layout_constraintStart_toStartOf="@+id/glv_1"
        app:layout_constraintTop_toBottomOf="@id/til_empresa">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tie_cargo_empresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_contacto_edittext_cargo_empresa"
            android:imeActionLabel="@string/edit_contacto_edittext_action_label"
            android:imeOptions="actionDone"
            android:inputType="textCapWords"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btn_listo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="listo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>